--- a/Assignment1/Assignment1/Base.lproj/Main.storyboard
+++ b/Assignment1/Assignment1/Base.lproj/Main.storyboard
@@ -18,15 +18,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="133" sectionHeaderHeight="28" sectionFooterHeight="28" id="VNi-pD-jbo">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="54" width="320" height="514"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <view key="tableHeaderView" contentMode="scaleToFill" id="eJn-RQ-xKe" customClass="UIControl">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" misplaced="YES" id="eJn-RQ-xKe" customClass="UIControl">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="24"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Networking Error" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ekz-P3-riK">
-                                            <rect key="frame" x="92" y="12" width="130" height="21"/>
+                                            <rect key="frame" x="95" y="0.0" width="130" height="24"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <gestureRecognizers/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -42,7 +42,7 @@
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="133" id="vyV-ps-CoI" customClass="MovieCell" customModule="Assignment1" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="72" width="320" height="133"/>
+                                        <rect key="frame" x="0.0" y="52" width="320" height="133"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vyV-ps-CoI" id="qa3-kF-ZVm">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="132"/>
@@ -76,6 +76,11 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <searchBar contentMode="redraw" misplaced="YES" id="OLN-uf-tud">
+                                <rect key="frame" x="0.0" y="70" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
@@ -96,12 +101,13 @@
                     <connections>
                         <outlet property="NetworkView" destination="eJn-RQ-xKe" id="4ZK-5f-Hwg"/>
                         <outlet property="navItem" destination="BBF-9t-rL4" id="NLQ-ca-igj"/>
+                        <outlet property="searchBar" destination="OLN-uf-tud" id="6E5-J1-1Mc"/>
                         <outlet property="tableView" destination="VNi-pD-jbo" id="NVQ-Tv-LXB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="85" y="151"/>
+            <point key="canvasLocation" x="78" y="172"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="M6E-gd-eZe">
@@ -137,25 +143,6 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
-                                <view key="backgroundView" contentMode="scaleToFill" id="GY8-AU-70G" customClass="UIControl">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Networking Error" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="DgG-GG-H8g">
-                                            <rect key="frame" x="92" y="12" width="130" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <gestureRecognizers/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <gestureRecognizers/>
-                                    <connections>
-                                        <action selector="NetChange:" destination="BYZ-38-t0r" eventType="touchDown" id="SM3-a0-ug5"/>
-                                    </connections>
-                                </view>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" reuseIdentifier="CollectionCell" id="rbf-kx-Lte" customClass="CollectionViewCell" customModule="Assignment1" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="153" height="292"/>
@@ -165,7 +152,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" id="Sm2-6E-TL7">
-                                                    <rect key="frame" x="4" y="8" width="149" height="284"/>
+                                                    <rect key="frame" x="8" y="4" width="149" height="284"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
@@ -195,7 +182,6 @@
                     </navigationItem>
                     <connections>
                         <outlet property="CollectionView" destination="2hX-vq-D8n" id="RFX-19-M2o"/>
-                        <outlet property="NetworkView" destination="GY8-AU-70G" id="Yy9-c9-dIp"/>
                         <outlet property="navItem" destination="DrW-vV-RdS" id="fLF-Hh-JNo"/>
                     </connections>
                 </viewController>
